<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_green"
    tools:context="com.app.gdo.alarmfunproject.user.LoginActivity">


    <RelativeLayout
        android:id="@+id/layoutLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/textViewAlreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_already_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewAlreadyAccount"
            android:layout_margin="10dp"
            android:hint="@string/hint_user_name" />

        <EditText
            android:id="@+id/editTextPassWord"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextUserName"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/hint_pass"
            android:password="true" />

        <TextView
            android:id="@+id/textViewForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editTextPassWord"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_forget_password" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/textViewForgetPassword"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@color/color_green"
            android:text="@string/text_btn_login"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonLogin"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/text_create_account" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@mipmap/picture" />
</RelativeLayout>
